<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="285dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin = "16dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/select_video_quality" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:selectAllOnFocus="true"
                android:id="@+id/radioButton480"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_480p" />

            <RadioButton
                android:id="@+id/radioButton720"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_720p" />

            <RadioButton
                android:id="@+id/radioButton1080"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1080p" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>