<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.player.PlayerActivity">
    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:padding="8dp"
                android:text="@string/back"
                android:textColor="@color/no_internet_background"
                android:textSize="17sp"
                app:drawableStartCompat="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Playlist"
                android:textColor="@color/no_internet_background"
                android:textSize="20sp" />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="240dp">
            <ImageView
                android:id="@+id/img_video"
                tools:src="@drawable/photo_no_internet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="24dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:text="Title text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_btn_download"
                    android:backgroundTint="#00000000"
                    android:drawableEnd="@drawable/ic_download"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="9dp"
                    android:text="@string/download"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginBottom="11dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/lorem"
                    android:textSize="16sp" />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <include
            layout="@layout/no_internet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/no_internet_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>